# metatrader-mcp-server

./: .env.example  .gitignore  CLAUDE.md  LLM.md  README.md  playground.py  pyproject.toml  setup.cfg  structure.md  test_final.py  test_price_target.py  test_price_targets.py  test_profit.py  test_simple.py  test_simple_target.py  test_simplified.py
docs/: README.md  endpoints.md  index.md  openapi.md
docs/client/: account.md  connection.md  history.md  market.md
docs/development/: testing.md
docs/metatrader_client/: README.md  _order.md
docs/roadmap/: version-checklist.md
docs/server/: plan.md  plan_phase_2.md  structure.md
llm/: create_tests.md
references/: Defining a Unified Function Schema for Cross-Platform LLM Tool Use (OpenAI, Gemini, Claude).md
references/metatrader/: README.md
references/metatrader/functions/: README.md  account_info.md  copy_rates_from.md  copy_rates_from_pos.md  copy_rates_range.md  copy_ticks_from.md  copy_ticks_range.md  history_deals_get.md  (+25 more)
roadmap/: version-checklist.md
src/MetaTraderMCPServer/: __main__.py
src/mcp/: __init__.py  main.py
src/mcp_server/: __init__.py  main.py
src/metatrader_client/: client_history.py
src/metatrader_mcp/: cli.py  server.py
src/metatrader_mcp_server.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/metatrader_openapi/: config.py  main.py
tests/: __init__.py  client_test.py  config.py  run_tests.py
tests/client/: __init__.py  account.py  connection.py  history.py  market.py  order.py
tests/metatrader_client/: order.py  test_order.py
tests/server/: __init__.py
(+57 files in other folders)
